Contacts skin: notificationbox would sometime overflow horizontally, causing scrollbar to appear. Fixed.
darcs-hash:20080216121111-8cc29-adf7aeca8265d4695ee968c2610012bec71d82f5.gz

--- a/chrome/skin/classic/experimental/contacts.css
+++ b/chrome/skin/classic/experimental/contacts.css
@@ -33,6 +33,13 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @namespace html url("http://www.w3.org/1999/xhtml");
 
+/* GENERAL */
+
+notificationbox {
+    overflow: hidden;
+}
+
+
 /* CONTACT LIST */
 
 #contacts {
